# sovereign-vault

./: .gitignore  CITATION.cff  LICENSE  README.md  SECURITY.md  llms.txt  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: basic_usage.py
sovereign_vault/: __init__.py
tests/: test_vault.py
