[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "sovereign-vault"
version = "1.0.0"
description = "Reversible PII tokenization for LLM pipelines — send documents to cloud AI without exposing real data"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["privacy", "pii", "llm", "tokenization", "gdpr", "hipaa", "ai", "redaction"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
ner = ["gliner>=0.1.0"]
llm = ["ollama>=0.1.0"]
all = ["gliner>=0.1.0", "ollama>=0.1.0"]

[project.urls]
Homepage = "https://github.com/brokenbartender/sovereign-vault"
Repository = "https://github.com/brokenbartender/sovereign-vault"
Issues = "https://github.com/brokenbartender/sovereign-vault/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["sovereign_vault*"]
